crates/link-lexer/tests/snapshots/snapshots__blank_and_comment_lines_between_blocks.snap
---
source: crates/link-lexer/tests/snapshots.rs
expression: "dump(\"\\\nfn main():\n    a\n\n            # not an indent\n\n    b\n\")"
---
== source ==
|fn main():
|    a
|
|            # not an indent
|
|    b
|

== tokens ==
   0..2     Fn
   3..7     Ident("main")
   7..8     LParen
   8..9     RParen
   9..10    Colon
  10..11    Newline
  11..15    Indent
  15..16    Ident("a")
  16..17    Newline
  51..52    Ident("b")
  52..53    Newline
  53..53    Dedent
  53..53    Eof

== diagnostics ==
(none)
