crates/link-lexer/tests/snapshots/snapshots__bracket_continuation_with_misleading_indentation.snap
---
source: crates/link-lexer/tests/snapshots.rs
expression: "dump(\"\\\nfn main():\n    call(\n            first,\n  second,\n        [1, 2,\n         3],\n    )\n    after\n\")"
---
== source ==
|fn main():
|    call(
|            first,
|  second,
|        [1, 2,
|         3],
|    )
|    after
|

== tokens ==
   0..2     Fn
   3..7     Ident("main")
   7..8     LParen
   8..9     RParen
   9..10    Colon
  10..11    Newline
  11..15    Indent
  15..19    Ident("call")
  19..20    LParen
  33..38    Ident("first")
  38..39    Comma
  42..48    Ident("second")
  48..49    Comma
  58..59    LBracket
  59..60    Int { value: 1, base: Dec, suffix: None }
  60..61    Comma
  62..63    Int { value: 2, base: Dec, suffix: None }
  63..64    Comma
  74..75    Int { value: 3, base: Dec, suffix: None }
  75..76    RBracket
  76..77    Comma
  82..83    RParen
  83..84    Newline
  88..93    Ident("after")
  93..94    Newline
  94..94    Dedent
  94..94    Eof

== diagnostics ==
(none)
