crates/link-lexer/tests/snapshots/snapshots__comments_only.snap
---
source: crates/link-lexer/tests/snapshots.rs
expression: "dump(\"# a header\\n\\n      # an indented comment\\n\")"
---
== source ==
|# a header
|
|      # an indented comment
|

== tokens ==
  40..40    Eof

== diagnostics ==
(none)
