crates/link-lexer/tests/snapshots/snapshots__mixed_program.snap
---
source: crates/link-lexer/tests/snapshots.rs
expression: "dump(\"\\\nuse text.parser (Token, lex)\n\nstruct Doc:\n    title: String\n    body: String\n\nfn largest[T: Ord](items: &Array[T]) -> &T:\n    let mut best = items.get(0)\n    for item in items:\n        if item > best: best = item\n    best\n\nfn read_config(path: &String) -> Result[Config, Error]:\n    let text = read_file(path)?   # early return on error\n    match parse(&text):\n        Ok(value): value\n        Err(e): panic(e)\n\")"
---
== source ==
|use text.parser (Token, lex)
|
|struct Doc:
|    title: String
|    body: String
|
|fn largest[T: Ord](items: &Array[T]) -> &T:
|    let mut best = items.get(0)
|    for item in items:
|        if item > best: best = item
|    best
|
|fn read_config(path: &String) -> Result[Config, Error]:
|    let text = read_file(path)?   # early return on error
|    match parse(&text):
|        Ok(value): value
|        Err(e): panic(e)
|

== tokens ==
   0..3     Use
   4..8     Ident("text")
   8..9     Dot
   9..15    Ident("parser")
  16..17    LParen
  17..22    Ident("Token")
  22..23    Comma
  24..27    Ident("lex")
  27..28    RParen
  28..29    Newline
  30..36    Struct
  37..40    Ident("Doc")
  40..41    Colon
  41..42    Newline
  42..46    Indent
  46..51    Ident("title")
  51..52    Colon
  53..59    Ident("String")
  59..60    Newline
  64..68    Ident("body")
  68..69    Colon
  70..76    Ident("String")
  76..77    Newline
  78..78    Dedent
  78..80    Fn
  81..88    Ident("largest")
  88..89    LBracket
  89..90    Ident("T")
  90..91    Colon
  92..95    Ident("Ord")
  95..96    RBracket
  96..97    LParen
  97..102   Ident("items")
 102..103   Colon
 104..105   Amp
 105..110   Ident("Array")
 110..111   LBracket
 111..112   Ident("T")
 112..113   RBracket
 113..114   RParen
 115..117   Arrow
 118..119   Amp
 119..120   Ident("T")
 120..121   Colon
 121..122   Newline
 122..126   Indent
 126..129   Let
 130..133   Mut
 134..138   Ident("best")
 139..140   Eq
 141..146   Ident("items")
 146..147   Dot
 147..150   Ident("get")
 150..151   LParen
 151..152   Int { value: 0, base: Dec, suffix: None }
 152..153   RParen
 153..154   Newline
 158..161   For
 162..166   Ident("item")
 167..169   In
 170..175   Ident("items")
 175..176   Colon
 176..177   Newline
 177..185   Indent
 185..187   If
 188..192   Ident("item")
 193..194   Gt
 195..199   Ident("best")
 199..200   Colon
 201..205   Ident("best")
 206..207   Eq
 208..212   Ident("item")
 212..213   Newline
 217..217   Dedent
 217..221   Ident("best")
 221..222   Newline
 223..223   Dedent
 223..225   Fn
 226..237   Ident("read_config")
 237..238   LParen
 238..242   Ident("path")
 242..243   Colon
 244..245   Amp
 245..251   Ident("String")
 251..252   RParen
 253..255   Arrow
 256..262   Ident("Result")
 262..263   LBracket
 263..269   Ident("Config")
 269..270   Comma
 271..276   Ident("Error")
 276..277   RBracket
 277..278   Colon
 278..279   Newline
 279..283   Indent
 283..286   Let
 287..291   Ident("text")
 292..293   Eq
 294..303   Ident("read_file")
 303..304   LParen
 304..308   Ident("path")
 308..309   RParen
 309..310   Question
 336..337   Newline
 341..346   Match
 347..352   Ident("parse")
 352..353   LParen
 353..354   Amp
 354..358   Ident("text")
 358..359   RParen
 359..360   Colon
 360..361   Newline
 361..369   Indent
 369..371   Ident("Ok")
 371..372   LParen
 372..377   Ident("value")
 377..378   RParen
 378..379   Colon
 380..385   Ident("value")
 385..386   Newline
 394..397   Ident("Err")
 397..398   LParen
 398..399   Ident("e")
 399..400   RParen
 400..401   Colon
 402..407   Ident("panic")
 407..408   LParen
 408..409   Ident("e")
 409..410   RParen
 410..411   Newline
 411..411   Dedent
 411..411   Dedent
 411..411   Eof

== diagnostics ==
(none)
