crates/link-lexer/tests/snapshots/snapshots__operators_and_punctuation.snap
---
source: crates/link-lexer/tests/snapshots.rs
expression: "dump(\"+ - * / % & | ^ << >> = == != < > <= >= -> => ? _ @ . , : ;\\n\")"
---
== source ==
|+ - * / % & | ^ << >> = == != < > <= >= -> => ? _ @ . , : ;
|

== tokens ==
   0..1     Plus
   2..3     Minus
   4..5     Star
   6..7     Slash
   8..9     Percent
  10..11    Amp
  12..13    Pipe
  14..15    Caret
  16..18    Shl
  19..21    Shr
  22..23    Eq
  24..26    EqEq
  27..29    NotEq
  30..31    Lt
  32..33    Gt
  34..36    LtEq
  37..39    GtEq
  40..42    Arrow
  43..45    FatArrow
  46..47    Question
  48..49    Underscore
  50..51    At
  52..53    Dot
  54..55    Comma
  56..57    Colon
  58..59    Semi
  59..60    Newline
  60..60    Eof

== diagnostics ==
(none)
