crates/link-lexer/tests/snapshots/snapshots__string_and_character_literals.snap
---
source: crates/link-lexer/tests/snapshots.rs
expression: "dump(\"\\\"hello\\\" \\\"a\\\\nb\\\" \\\"\\\\t\\\\r\\\\\\\\\\\\\\\"\\\\0\\\" \\\"\\\\u{1F600}\\\" 'a' '\\\\n'\\n\")"
---
== source ==
|"hello" "a\nb" "\t\r\\\"\0" "\u{1F600}" 'a' '\n'
|

== tokens ==
   0..7     Str("hello")
   8..14    Str("a\nb")
  15..27    Str("\t\r\\\"\0")
  28..39    Str("😀")
  40..43    Char('a')
  44..48    Char('\n')
  48..49    Newline
  49..49    Eof

== diagnostics ==
(none)
